fix: results grid on mobile/tablet (untested)

--- a/static/grid.css
+++ b/static/grid.css
@@ -9,9 +9,29 @@
 .grid__images {
     grid-template-columns: repeat(2, 1fr);
 }
-.grid__results{
-    grid-template-columns: repeat(4, 1fr);
+
+.grid__results {
+    grid-template-columns: repeat(1, 1fr);
 }
+
+@media(min-width: 576px)and (max-width: 767.98px) {
+    .grid__results {
+        grid-template-columns: repeat(2, 1fr)
+    }
+}
+
+@media(min-width: 768px)and (max-width: 991.98px) {
+    .grid__results {
+        grid-template-columns: repeat(3, 1fr)
+    }
+}
+
+@media(min-width: 992px)and (max-width: 1199.98px) {
+    .grid__results {
+        grid-template-columns: repeat(4, 1fr)
+    }
+}
+
 .grid__images:not(:empty) {
     /*height: 256px;
     overflow-y: auto;*/
@@ -20,4 +40,3 @@
 .grid__images > li:first-child {
     grid-column-end: span 2;
 }
-
