--- a/static/utils.css
+++ b/static/utils.css
@@ -2,17 +2,17 @@
     border-top-left-radius: var(--border-radius);
     border-top-right-radius: var(--border-radius);
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
 }
 .card-item {
-    width: 250px;
+    /*width: 250px;*/
 }
 .card-item-big {
     width: 100%;
 }
 
 .card-item-text {
-    height:200px;
+    height: 200px;
     overflow: hidden;
 }
 .card-item-big-text {
@@ -39,17 +39,17 @@
 }
 
 .watch_button {
-    #padding:10px;
+    /*padding: 10px;*/
     border-radius: 50%;
     box-shadow: 1px 1px 2px black;
     border: 1px dashed silver;
     position: absolute;
     top: 10px;
     right: 10px;
-    width:24px;
-    height:24px;
-    #text-align:center;
-    #vertical-align: middle;
+    width: 24px;
+    height: 24px;
+    /*text-align:center;
+    vertical-align: middle;*/
     z-index: 200;
 }
 
